--- a/public/css/app.css
+++ b/public/css/app.css
@@ -143,3 +143,31 @@ body {
 
     padding: 30px;
 }
+
+.cont_input_1 {
+
+}
+
+.cont_input_1 label {
+    color: #595959;
+    font-size: 0.9em;
+    margin: 0;
+}
+
+.input_1 {
+    background-color: transparent;
+
+    width: 100%;
+    height: 40px;
+
+    padding: 10px;
+    margin-bottom: 20px;
+
+    border: 1px solid #ccc;
+    border-radius: 10px !important;
+}
+
+.input_1:focus {
+    border-color:#ffc107 !important;
+    box-shadow: 0 #ffc107 0 #ffc107 0 #ffc107 !important;
+}
