--- a/public/css/app.css
+++ b/public/css/app.css
@@ -145,29 +145,61 @@ body {
 }
 
 .cont_input_1 {
-
+    margin-bottom: 15px;
 }
 
 .cont_input_1 label {
     color: #595959;
     font-size: 0.9em;
     margin: 0;
+    
+}
+
+.input-container,
+.textarea-container {
+    position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .input_1 {
     background-color: transparent;
 
     width: 100%;
-    height: 40px;
+    padding: 10px !important;
 
-    padding: 10px;
-    margin-bottom: 20px;
+    padding-left: 40px !important; /* Espacio para el ícono */
 
     border: 1px solid #ccc;
     border-radius: 10px !important;
+
+    resize: none;
+}
+
+.input-container i {
+    position: absolute;
+    left: 10px; 
+    color: black; 
+}
+
+.textarea-container i {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%); /* Centra el ícono verticalmente */
+    color: black; /* Cambia el color del ícono a negro */
 }
 
 .input_1:focus {
+    outline: 2px solid transparent;
+    outline-offset: 2px ;
+    --tw-ring-inset: var(--tw-empty);
+    --tw-ring-offset-width: 0px !important;
+    --tw-ring-offset-color: #fff !important;
+    --tw-ring-color: #ffc107 !important; /* Amarillo */
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow) !important;
+
     border-color:#ffc107 !important;
-    box-shadow: 0 #ffc107 0 #ffc107 0 #ffc107 !important;
 }
