--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,8 @@
 :root {
     --color: rgba(2, 77, 223, 1);
+    --Edit: #ffc107;
+    --Delete: #dc3545;
+    --Add: #28a745;
 }
 
 
@@ -142,6 +145,16 @@ body {
     border: var(--color) 2px solid;
 }
 
+
+.main_banner_2 button {
+    margin-top: 20px;
+}
+
+.main_banner_2 button:hover {
+    background-color: var(--color);
+    border: var(--color) 2px solid;
+}
+
 .main h1 {
     font-size: 4em;
     font-weight: 500;
@@ -153,12 +166,13 @@ body {
     height: auto;
     
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
 
-    gap: 20px;
-
+    gap: 40px;
     padding: 30px;
 }
+
 
 .cont_input_1 {
     margin-bottom: 15px;
@@ -213,19 +227,19 @@ body {
     outline-offset: 2px ;
     --tw-ring-offset-width: 0px !important;
     --tw-ring-offset-color: #fff !important;
-    --tw-ring-color: #ffc107 !important; /* Amarillo */
+    --tw-ring-color: var(--borderColor) !important; /* Amarillo */
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow) !important;
 
-    border-color:#ffc107 !important;
+    border-color:var(--borderColor) !important;
 }
 
 /* Contenedor del input */
 .input-container-2 {
     display: flex;
     align-items: center;
-    background-color: #ffc107; /* Amarillo */
+    background-color: var(--borderColor); /* Amarillo */
     padding: 8px 12px;
     border-radius: 5px;
     cursor: pointer;
@@ -254,13 +268,13 @@ body {
 
 /* Estado cuando el checkbox está marcado */
 .input_1[type="checkbox"]:checked {
-    background-color: #ffca2c !important; /* Color de fondo cuando está marcado */
+    background-color: var(--borderColor) !important; /* Color de fondo cuando está marcado */
     border-color: white !important;
 }
 
 /* Efecto hover */
 .input-container-2:hover {
-    background-color: #e0a800; /* Amarillo más oscuro al pasar el ratón */
+    filter: brightness(85%);
 }
 
 /* Efecto cuando el checkbox está enfocado */
