--- a/public/css/app.css
+++ b/public/css/app.css
@@ -87,7 +87,7 @@ body {
 .main_banner_1 {
     color: white;
     width: 100%;
-    height: 600px;
+    height: 500px;
 
     overflow: hidden; 
     display: flex;
@@ -294,4 +294,32 @@ body {
 
     margin: 20px 0;
     padding: 10px;  
+}
+
+.table_cont {
+    background-color: #f3f4f6;
+
+    width: auto;
+    height: auto;
+
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+@media (max-width: 430px) {
+    .col-lg-6 {
+        max-width: 430px !important;
+    }
+}
+
+.table td img {
+    max-width: 92.77px; /* Hace que la imagen ocupe el 100% del ancho de la celda */
+    height: auto; /* Mantiene la proporción de la imagen */
+}
+
+@media (max-width: 430px) {
+    .table td img {
+        max-width: 100%; /* Hace que la imagen ocupe el 100% del ancho de la celda */
+        height: auto; /* Mantiene la proporción de la imagen */
+    }
 }
