--- a/public/css/app.css
+++ b/public/css/app.css
@@ -323,3 +323,8 @@ body {
         height: auto; /* Mantiene la proporción de la imagen */
     }
 }
+
+.custom-carousel-btn .carousel-control-next-icon,
+.custom-carousel-btn .carousel-control-prev-icon {
+    filter: invert(100%) hue-rotate(210deg);
+}
