--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,7 +9,10 @@
 body {
     background-color: white;
     width: 100%;
-    height: calc(100vh - 100px);
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .wrapped {
@@ -82,6 +85,11 @@ body {
 
 .main {
     width: 100%;
+    height:  500px;
+    
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .main_banner_1 {
