--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,7 +94,7 @@ body {
 .main_banner_1 {
     color: white;
     width: 100%;
-    height: 500px;
+    height: 410px;
 
     overflow: hidden; 
     display: flex;
@@ -334,4 +334,56 @@ body {
 .custom-carousel-btn .carousel-control-next-icon,
 .custom-carousel-btn .carousel-control-prev-icon {
     filter: invert(100%) hue-rotate(210deg);
+}
+
+.nav-link {
+    color: #333;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 15px;
+    position: relative;
+}
+
+.nav-link.active {
+    background-color: #eaeaea;
+}
+
+.nav-link.active::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: black;
+}
+
+.eventos-title-container {
+    text-align: center;
+    margin: 0px;
+}
+.eventos-title {
+    position: relative;
+    font-size:2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #333;
+    text-align: center;
+    display: inline-block;
+
+    margin: 20px 0px 40px 0px !important;
+
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.eventos-title::after {
+    content: '';
+    position: absolute;
+    bottom: -5px; /* Distancia debajo del texto */
+    left: -5px;
+    right: -5px;
+    width: auto; /* Ancho de la línea */
+    height: 3px; /* Grosor de la línea */
+    background-color: #000; /* Color de la línea */
 }
