--- a/public/css/app.css
+++ b/public/css/app.css
@@ -113,7 +113,9 @@ body {
 .main_banner_2 {
     color: white;
     width: 100%;
-    height: 400px;
+    height: 50%;
+
+    padding: 80px;
 
     overflow: hidden; 
     display: flex;
