--- a/public/css/app.css
+++ b/public/css/app.css
@@ -389,3 +389,23 @@ body {
     height: 3px; /* Grosor de la línea */
     background-color: #000; /* Color de la línea */
 }
+
+.container-degradado {
+    height: 100vh; 
+    width: 100%;
+    background: linear-gradient(45deg, #e73a06,#ea1394, #3667cf, #23d541);
+    background-size: 400% 400%;
+    animation: color 12s ease-in infinite;
+}
+
+@keyframes color {
+    0% {
+        background-position: 0 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0 50%;
+    }
+}
