--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Orbitron:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 :root {
     --color: rgba(2, 77, 223, 1);
     --Edit: #ffc107;
@@ -5,6 +10,12 @@
     --Add: #28a745;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+}
 
 body {
     background-color: white;
@@ -393,17 +404,21 @@ body {
 .container-degradado {
     height: 100vh; 
     width: 100%;
-    background: linear-gradient(45deg,  
+    background: linear-gradient(45deg,
+        rgba(255, 255, 255, 0.2),
+        #23d541,
         rgba(2, 77, 223, 1),   /* Azul primario */
-        rgba(0, 131, 255, 1),  /* Azul más claro */
-        rgba(0, 91, 187, 1),   /* Azul intermedio */
-        rgba(0, 56, 121, 1),    /* Azul oscuro */
-        #3667cf, 
-        #23d541);
+        rgba(0, 174, 255, 1),  /* Azul más claro */
+        rgb(16, 0, 187),   /* Azul intermedio */
+        rgb(111, 1, 255)     /* Azul oscuro */
     );
 
     background-size: 400% 400%;
     animation: color 12s ease-in infinite;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @keyframes color {
