--- a/public/css/app.css
+++ b/public/css/app.css
@@ -125,7 +125,7 @@ body {
 .main_banner_1 {
     color: white;
     width: 100%;
-    height: 410px;
+    height: 45%;
 
     overflow: hidden; 
     display: flex;
@@ -153,6 +153,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
 
     background-image: 
         linear-gradient(to top, rgba(2, 77, 223, 0.7), rgba(0, 0, 0, 0.3) 80%), /* Degradado hacia arriba */
@@ -242,7 +243,7 @@ body {
     padding: 10px !important;
 
     padding-left: 40px !important; /* Espacio para el ícono */
-    padding-right: 40px !important;
+    padding-right: 10px !important;
 
     border-radius: 10px !important;
 
@@ -527,4 +528,214 @@ body.dark .text {
 .checkbox-custom:hover {
     background-color: #f2f2f2;
     border: 2px solid var(--color);
+}
+
+.titulo {
+    font-family: 'Orbitron', sans-serif !important; 
+    font-weight: 700 !important;
+}
+
+.sub-titulo {
+    font-family: 'Work Sans', sans-serif !important; 
+    font-weight: 300 !important;
+}
+
+.ver-evento {
+    width: 45%;
+    height: auto;
+    background-color: var(--color);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+
+    display: flex;
+
+    color: black;
+}
+
+@media (max-width: 768px) {
+    .ver-evento {
+        width: 100%; /* 1 columna en pantallas más pequeñas */
+    }
+}
+
+.ver-evento i {
+    color: var(--color);
+    margin-right: 5px;
+}
+
+.ver-evento:hover {
+    scale: 1.05;
+}
+
+.ver-evento-info {
+    height: 100%;
+    flex: 1 1 50%;
+    
+    background-color: white;
+
+    padding: 20px;
+
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    gap: 20px;
+}
+
+.ver-evento-foto {
+    position: relative;
+    flex: 1 1 50%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    padding: 10px;
+}
+
+.ver-evento-foto-datos {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+
+    width: auto;
+    height: auto;
+
+    border-radius: 30px;
+    border: none;
+    gap: 2px;
+
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.4);
+
+    display: flex;
+    align-items: center;
+
+    padding: 1px 8px;
+    margin: 8px;
+
+    font-size: 12px;
+
+    transition: all 0.3s ease;
+}
+
+.ver-evento-foto-fecha {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    width: auto;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background-color: white;
+    border-radius: 5px;
+    padding: 0px 10px;
+    margin: 8px;
+    font-size: 12px;
+    gap: 0px;
+
+    box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.4);
+
+    transition: all 0.3s ease;
+}
+
+.ver-evento-foto-fecha:hover, .ver-evento-foto-fecha:focus,
+.ver-evento-foto-datos:hover, .ver-evento-foto-datos:focus,
+.btns:hover, .btns:focus 
+{
+    scale: 1.1;
+}
+
+.ver-evento-foto-fecha:active,
+.ver-evento-foto-datos:active,
+.btns:active
+{
+    scale: 0.9;
+}
+
+.ver-evento-foto-btns {
+    position: absolute;
+    bottom: 10px;
+    left: 0px;
+
+    display: flex;
+    justify-content: space-evenly;
+
+    width: 100%;
+    height: auto;
+}
+
+.btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    border-radius: 10px;
+}
+
+.btns i {
+    color: white;
+    margin-right: 0px;
+    border: none;
+}
+
+.info-icon {
+    position: relative;
+    cursor: pointer;
+}
+
+.tooltip-content {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+
+    left: 120%; /* Mueve el tooltip a la derecha del icono */
+    top: 0;
+
+    background-color: #333;
+    color: #fff;
+
+    width: auto;
+    height: auto;
+    white-space: normal; /* Permite que el texto se ajuste en varias líneas */
+    word-wrap: break-word; /* Asegura que las palabras largas se dividan */
+    overflow-wrap: break-word;;
+    text-align: left;
+
+    padding: 10px;
+    border-radius: 10px;
+    z-index: 10;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    white-space: nowrap;
+}
+
+.info-icon:hover .tooltip-content {
+    visibility: visible;
+    opacity: 1;
+}
+
+.ver-mas-btn {
+    background: none;
+    border: none;
+    color: var(--color);
 }
