--- a/public/css/app.css
+++ b/public/css/app.css
@@ -763,3 +763,28 @@ body.dark .text {
     transform: scale(1);
 }
 
+.contenedor-plan-info {
+    height: auto;
+    width: 50%;
+
+    display: flex;      
+    flex-direction: column;  
+    
+    box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.4);
+}
+
+.plan-img, .plan-info {
+    flex: 1;
+    width: 100%;
+}
+
+.plan-img {
+    min-height: 300px;
+}
+.plan-info {
+    padding: 20px;
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
