--- a/public/css/app.css
+++ b/public/css/app.css
@@ -560,7 +560,7 @@ body.dark .text {
     cursor: pointer;
     transition: all 0.3s ease;
 
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 2px 2px 10px var(--colorShadow);
 
     display: flex;
 
